# Avances-Preliminares-Taller-de-Grado-I

./: .gitignore  README.md  rviz_vis.rviz
STL_ENVIRONMENT/: CUBO.STL  GRIPPER.stl
docker/: Dockerfile
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/kuka_kr6_support/share/kuka_kr6_support/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/kuka_kr6_support/share/kuka_kr6_support/cmake/: kuka_kr6_supportConfig-version.cmake  kuka_kr6_supportConfig.cmake
ros2_ws/install/kuka_kr6_support/share/kuka_kr6_support/config/: joint_names_kr6r700sixx.yaml  joint_names_kr6r900sixx.yaml  joint_names_kuka_kr6_r900_2.yaml  opw_kinematics_kr6r700sixx.yaml  opw_parameters_kr6r900_2.yaml
ros2_ws/install/kuka_kr6_support/share/kuka_kr6_support/environment/: ament_prefix_path.dsv  path.dsv
ros2_ws/install/kuka_kr6_support/share/kuka_kr6_support/launch/: display.launch.py
ros2_ws/install/kuka_kr6_support/share/kuka_kr6_support/urdf/: kr6r700sixx.xacro  kr6r700sixx_macro.xacro  kr6r900_2.xacro  kr6r900_2_macro.xacro  kr6r900sixx.xacro  kr6r900sixx_macro.xacro
ros2_ws/install/kuka_resources/share/kuka_resources/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/install/kuka_resources/share/kuka_resources/cmake/: kuka_resourcesConfig-version.cmake  (+1 more)
ros2_ws/log/: latest_build
ros2_ws/src/kuka_kr6_moveit_config/: CMakeLists.txt  package.xml
ros2_ws/src/kuka_kr6_moveit_config/config/: joint_limits.yaml  kuka_kr6.srdf  moveit_controllers.yaml  ompl_planning.yaml
ros2_ws/src/kuka_kr6_moveit_config/launch/: demo.launch.py
ros2_ws/src/kuka_kr6_moveit_config/rviz/: moveit.rviz
ros2_ws/src/kuka_kr6_support/: CMakeLists.txt  package.xml
ros2_ws/src/kuka_kr6_support/config/: environment_poses.yaml
ros2_ws/src/kuka_kr6_support/launch/: display.launch.py
ros2_ws/src/kuka_kr6_support/meshes/environment/: base.stl  mesa.stl
ros2_ws/src/kuka_kr6_support/scripts/: apply_environment_poses.py  environment_pose_editor.py
ros2_ws/src/kuka_kr6_support/urdf/: environment.xacro  kr6r900sixx.xacro
ros2_ws/src/kuka_pick_place_demo/: package.xml  setup.cfg  setup.py
ros2_ws/src/kuka_pick_place_demo/config/: pick_place_points.yaml
ros2_ws/src/kuka_pick_place_demo/kuka_pick_place_demo/: __init__.py  fake_trajectory_controller_node.py  pick_place_sequence_node.py  point_recorder_node.py
ros2_ws/src/kuka_pick_place_demo/launch/: pick_place_sequence.launch.py  point_recorder.launch.py
ros2_ws/src/kuka_pick_place_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/kuka_pick_place_interfaces/srv/: SavePoint.srv
ros2_ws/src/kuka_resources/: CMakeLists.txt  package.xml
scripts/: attach_container.sh  build_image.sh  clean_ros2_build.sh  create_container.sh  launch_rviz.sh  start_container.sh  stop_container.sh
(+27 files in other folders)
