<?xml version="1.0"?>
<package format="3">
  <name>kuka_kr6_support</name>
  <version>0.1.0</version>
  <description>ROS2 Humble description package for KUKA KR6 R900 based on ROS-Industrial resources.</description>

  <maintainer email="eduardex@example.com">Eduardex</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
