<?xml version="1.0"?>
<package format="3">
  <name>kuka_resources</name>
  <version>0.1.0</version>
  <description>Common resources for KUKA ROS2 description packages.</description>

  <maintainer email="eduardex@example.com">Eduardex</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>